replace List.of() by Collections.emptyList() for the whole project