@@ -9,6 +9,7 @@ import org.openlca.ilcd.commons.Copyable;
 import org.openlca.ilcd.util.Val;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 @XmlAccessorType(XmlAccessType.FIELD)
@@ -24,7 +25,7 @@ public class CategoryList implements Copyable<CategoryList> {
 	// region getters
 
 	public List<Category> getCategories() {
-		return categories != null ? categories : List.of();
+		return categories != null ? categories : Collections.emptyList();
 	}
 
 	public ContentType getType() {
