@@ -79,23 +79,23 @@ public class DataSetInfo implements Copyable<DataSetInfo> {
 	}
 
 	public List<LangString> getName() {
-		return name != null ? name : List.of();
+		return name != null ? name : Collections.emptyList();
 	}
 
 	public List<String> getMethods() {
-		return methods != null ? methods : List.of();
+		return methods != null ? methods : Collections.emptyList();
 	}
 
 	public List<Classification> getClassifications() {
-		return classifications != null ? classifications : List.of();
+		return classifications != null ? classifications : Collections.emptyList();
 	}
 
 	public List<String> getImpactCategories() {
-		return impactCategories != null ? impactCategories : List.of();
+		return impactCategories != null ? impactCategories : Collections.emptyList();
 	}
 
 	public List<AreaOfProtection> getAreasOfProtection() {
-		return areasOfProtection != null ? areasOfProtection : List.of();
+		return areasOfProtection != null ? areasOfProtection : Collections.emptyList();
 	}
 
 	public String getIndicator() {
@@ -103,11 +103,11 @@ public class DataSetInfo implements Copyable<DataSetInfo> {
 	}
 
 	public List<LangString> getComment() {
-		return comment != null ? comment : List.of();
+		return comment != null ? comment : Collections.emptyList();
 	}
 
 	public List<Ref> getExternalDocs() {
-		return externalDocs != null ? externalDocs : List.of();
+		return externalDocs != null ? externalDocs : Collections.emptyList();
 	}
 
 	public Other getOther() {
