@@ -64,23 +64,23 @@ public class ImpactModel implements Copyable<ImpactModel> {
 	}
 
 	public List<LangString> getDescription() {
-		return description != null ? description : List.of();
+		return description != null ? description : Collections.emptyList();
 	}
 
 	public List<Ref> getSources() {
-		return sources != null ? sources : List.of();
+		return sources != null ? sources : Collections.emptyList();
 	}
 
 	public List<Ref> getIncludedMethods() {
-		return includedMethods != null ? includedMethods : List.of();
+		return includedMethods != null ? includedMethods : Collections.emptyList();
 	}
 
 	public List<LangString> getConsideredMechanisms() {
-		return consideredMechanisms != null ? consideredMechanisms : List.of();
+		return consideredMechanisms != null ? consideredMechanisms : Collections.emptyList();
 	}
 
 	public List<Ref> getFlowCharts() {
-		return flowCharts != null ? flowCharts : List.of();
+		return flowCharts != null ? flowCharts : Collections.emptyList();
 	}
 
 	public Other getOther() {
