@@ -44,11 +44,11 @@ public class QuantitativeReference implements Copyable<QuantitativeReference> {
 	// region getters
 
 	public List<Integer> getReferenceFlows() {
-		return referenceFlows != null ? referenceFlows : List.of();
+		return referenceFlows != null ? referenceFlows : Collections.emptyList();
 	}
 
 	public List<LangString> getFunctionalUnit() {
-		return functionalUnit != null ? functionalUnit : List.of();
+		return functionalUnit != null ? functionalUnit : Collections.emptyList();
 	}
 
 	public Other getOther() {
